fixat positions och overflows, artwork.html

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html, body {
 
     #gridwrap {
         display: flex;
-        height: calc(100vh - 69px);
+        height: calc(50% - 69px);
         width: 100%;
         
         flex-direction: column;
@@ -209,6 +209,8 @@ html, body {
     height: 100%;
     width: 100%;
     justify-content: center;
+    position: relative;
+    
 }
 
     #artwork {
@@ -221,7 +223,7 @@ html, body {
     top: 100vh;
     background-color: #0c0c0c;
     width: 100%;
-    height: 100px;
+    height: 50%;
 }
 
 
@@ -286,9 +288,9 @@ footer > hr{
 }
 
 html, body {
-    height: 100%;
+    height: calc(200vh - 69px);
     width: 100%;
-
+    overflow: ;
     background-color: #181818;
 }
 
@@ -299,6 +301,10 @@ html, body {
     font-family: 'Inter', sans-serif;
     padding: 0;
     margin: 0;
+}
+
+#gridwrap {
+    overflow: visible;
 }
 
 .burger:hover {
@@ -321,6 +327,7 @@ html, body {
     width: 200px;
     top: 69px;
     right: -200px;
+    position: fixed;
 }
 
 .nav-active {
@@ -352,8 +359,9 @@ html, body {
     background-color: rgba(0,0,0,1);
     width: 200px;
     top: 69px;
+    left: 0;
 
-    position: fixed;
+    position: absolute;
     height: calc(100vh - 69px);
     z-index: 1;
     left: 0;
@@ -373,15 +381,26 @@ html, body {
 
 .artcontainer {
     display: flex;
-    height: 100%;
-    width: 100%;
+    min-height: calc(100vh - 69px);
+    width: calc(100% - 200px);
     justify-content: center;
     align-items: center;
+    position: relative;
+    left: 200px;
 }
 
     #artwork {
         box-shadow: 10px 10px 18px 0 #0d0c11, -10px 10px 18px 0 #0d0c11;
         width: fit-content;
     }
+
+.desccontainer {
+    top: 100vh;
+    background-color: #0c0c0c;
+    width: calc(100%);
+    height: calc(100vh - 69px);
+    position: absolute;
+    
+}
 
 }
